syntax = "proto3";

package proto;

option go_package = "proto/";

service EmployeeService{
  rpc GetAll(NoRequest) returns (stream EmployeeResponse);
  rpc GetById(EmployeeIdRequest) returns (EmployeeResponse);
  rpc Create(EmployeeRequest) returns (EmployeeResponse);
  rpc Update(EmployeeRequest) returns (EmployeeResponse);
  rpc Delete(EmployeeIdRequest) returns (SuccessResponse);
}

message Employee{
  int64 e_id = 1;
  string email_address = 2;
  string first_name = 3;
  string last_name = 4;
}

message NoRequest{}

message EmployeeRequest{
  Employee e = 1;
}

message EmployeeResponse{
  Employee e = 1;
}

message EmployeeIdRequest{
  int64 e_id = 1;
}

message SuccessResponse{
  bool deleted = 1;
}



